Fixing mist overflow bs

--- a/_header.scss
+++ b/_header.scss
@@ -168,18 +168,18 @@
 	left: 0px;
 	top: 0px;
 	position: absolute;
-	width: 10000px;
+	width: 100%;
 	height: 181px;
-	@include vendor-prefix(animation, sidescroll 60s linear infinite);
+	@include vendor-prefix(animation, sidescroll 30s linear infinite);
 }
 
 @include keyframes(sidescroll) {
 	from {
-		@include vendor-prefix(transform, translateX(0px));
+		@include vendor-prefix(background-position, 1600px 0);
 	}
 
 	to {
-		@include vendor-prefix(transform, translateX(-1600px));
+		@include vendor-prefix(background-position, 0 0);
 	}
 }
 
