--- a/style.css
+++ b/style.css
@@ -241,84 +241,84 @@
   left: 0px;
   top: 0px;
   position: absolute;
-  width: 10000px;
+  width: 100%;
   height: 181px;
-  -webkit-animation: sidescroll 60s linear infinite;
-  -moz-animation: sidescroll 60s linear infinite;
-  -ms-animation: sidescroll 60s linear infinite;
-  -o-animation: sidescroll 60s linear infinite;
-  animation: sidescroll 60s linear infinite; }
+  -webkit-animation: sidescroll 30s linear infinite;
+  -moz-animation: sidescroll 30s linear infinite;
+  -ms-animation: sidescroll 30s linear infinite;
+  -o-animation: sidescroll 30s linear infinite;
+  animation: sidescroll 30s linear infinite; }
 
 @-webkit-keyframes sidescroll {
   from {
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    -ms-transform: translateX(0px);
-    -o-transform: translateX(0px);
-    transform: translateX(0px); }
+    -webkit-background-position: 1600px 0;
+    -moz-background-position: 1600px 0;
+    -ms-background-position: 1600px 0;
+    -o-background-position: 1600px 0;
+    background-position: 1600px 0; }
 
   to {
-    -webkit-transform: translateX(-1600px);
-    -moz-transform: translateX(-1600px);
-    -ms-transform: translateX(-1600px);
-    -o-transform: translateX(-1600px);
-    transform: translateX(-1600px); } }
+    -webkit-background-position: 0 0;
+    -moz-background-position: 0 0;
+    -ms-background-position: 0 0;
+    -o-background-position: 0 0;
+    background-position: 0 0; } }
 @-moz-keyframes sidescroll {
   from {
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    -ms-transform: translateX(0px);
-    -o-transform: translateX(0px);
-    transform: translateX(0px); }
+    -webkit-background-position: 1600px 0;
+    -moz-background-position: 1600px 0;
+    -ms-background-position: 1600px 0;
+    -o-background-position: 1600px 0;
+    background-position: 1600px 0; }
 
   to {
-    -webkit-transform: translateX(-1600px);
-    -moz-transform: translateX(-1600px);
-    -ms-transform: translateX(-1600px);
-    -o-transform: translateX(-1600px);
-    transform: translateX(-1600px); } }
+    -webkit-background-position: 0 0;
+    -moz-background-position: 0 0;
+    -ms-background-position: 0 0;
+    -o-background-position: 0 0;
+    background-position: 0 0; } }
 @-ms-keyframes sidescroll {
   from {
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    -ms-transform: translateX(0px);
-    -o-transform: translateX(0px);
-    transform: translateX(0px); }
+    -webkit-background-position: 1600px 0;
+    -moz-background-position: 1600px 0;
+    -ms-background-position: 1600px 0;
+    -o-background-position: 1600px 0;
+    background-position: 1600px 0; }
 
   to {
-    -webkit-transform: translateX(-1600px);
-    -moz-transform: translateX(-1600px);
-    -ms-transform: translateX(-1600px);
-    -o-transform: translateX(-1600px);
-    transform: translateX(-1600px); } }
+    -webkit-background-position: 0 0;
+    -moz-background-position: 0 0;
+    -ms-background-position: 0 0;
+    -o-background-position: 0 0;
+    background-position: 0 0; } }
 @-o-keyframes sidescroll {
   from {
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    -ms-transform: translateX(0px);
-    -o-transform: translateX(0px);
-    transform: translateX(0px); }
+    -webkit-background-position: 1600px 0;
+    -moz-background-position: 1600px 0;
+    -ms-background-position: 1600px 0;
+    -o-background-position: 1600px 0;
+    background-position: 1600px 0; }
 
   to {
-    -webkit-transform: translateX(-1600px);
-    -moz-transform: translateX(-1600px);
-    -ms-transform: translateX(-1600px);
-    -o-transform: translateX(-1600px);
-    transform: translateX(-1600px); } }
+    -webkit-background-position: 0 0;
+    -moz-background-position: 0 0;
+    -ms-background-position: 0 0;
+    -o-background-position: 0 0;
+    background-position: 0 0; } }
 @keyframes sidescroll {
   from {
-    -webkit-transform: translateX(0px);
-    -moz-transform: translateX(0px);
-    -ms-transform: translateX(0px);
-    -o-transform: translateX(0px);
-    transform: translateX(0px); }
+    -webkit-background-position: 1600px 0;
+    -moz-background-position: 1600px 0;
+    -ms-background-position: 1600px 0;
+    -o-background-position: 1600px 0;
+    background-position: 1600px 0; }
 
   to {
-    -webkit-transform: translateX(-1600px);
-    -moz-transform: translateX(-1600px);
-    -ms-transform: translateX(-1600px);
-    -o-transform: translateX(-1600px);
-    transform: translateX(-1600px); } }
+    -webkit-background-position: 0 0;
+    -moz-background-position: 0 0;
+    -ms-background-position: 0 0;
+    -o-background-position: 0 0;
+    background-position: 0 0; } }
 #sr-header-area, .drop-choices {
   background: #0c1619;
   border: 1px solid black;
